# rdr

./: .gitattributes  .gitignore  Cargo.toml  LICENSE.txt  README.md  build.rs
.github/workflows/: rust.yml
cmd/: Cargo.toml
cmd/src/: command_create.rs  command_dump.rs  main.rs
etc/: j01.config.yaml  j02.config.yaml  j03.config.yaml  npp.config.yaml
lib/: Cargo.toml
lib/src/writer/: mod.rs
rdr/: Cargo.toml  RNSCA-RVIRS.hdr  build.rs
rdr-cli/: Cargo.toml
rdr-cli/src/: command_create.rs  command_dump.rs  command_info.rs  main.rs
rdr-cmd/: Cargo.toml  build.rs
rdr-cmd/src/: command_aggr.rs  command_create.rs  command_dump.rs  command_extract.rs  command_info.rs  main.rs
rdr-lib/: Cargo.toml  build.rs
rdr-lib/etc/: j01.config.yaml  j02.config.yaml  j03.config.yaml  j04.config.yaml  npp.config.yaml
rdr-lib/src/: collector.rs  config.rs  error.rs  lib.rs  merge.rs  rdr.rs  time.rs
rdr-lib/src/writer/: hdfc.rs  mod.rs
rdr-lib/tests/: integration.rs
rdr/src/: collector.rs  config.rs  error.rs  lib.rs  merge.rs  rdr.rs  time.rs  writer.rs
rdr/src/writer/: hdfc.rs  mod.rs
scripts/: fetch_testdata.sh
src/: collector.rs  command_create.rs  command_dump.rs  config.rs  main.rs  rdr.rs  time.rs  utils.rs
src/writer/: hdfc.rs  mod.rs
tests/fixtures/: RNSCA-RVIRS_j02_d20230101_t1732582_e1744210_b00001_c20230103222412711000_drlu_ops.h5
