[workspace]
resolver = "2"
members = ["rdr-lib", "rdr-cmd"]
default-members = ["rdr-lib", "rdr-cmd"]

[workspace.package]
version = "0.1.0-beta.4"
edition = "2021"
description = "JPSS HDF5 Raw-Data-Record (RDR) Utilities"
authors = ["Bruce Flynn <brucef@ssec.wisc.edu>"]
repository = "https://github.com/bmflynn/rdr"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ccsds = "0.1.0-beta.21"
hifitime = "4.0.1"
hdf5 = { version = "0.8.1" }
hdf5-sys = { version = "0.8.1", features = ["static"] }
# To match version used in hdf5 
ndarray = "0.15.6"
tempfile = "3.14.0"
tracing = "0.1"
spacecrafts = "0.1.0-beta.4"
