[package]
name = "rdr-cli"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.4", features = ["derive"] }
ccsds.workspace = true
rdr = { path = "../lib" }
tempfile = "3.10.1"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hdf5.workspace = true
ndarray.workspace = true
chrono.workspace = true

# Example of customizing binaries in Cargo.toml.
[[bin]]
name = "rdr"
path = "src/main.rs"
