[package]
name = "rdr"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rdr"
path = "src/lib.rs"

[dependencies]
ccsds.workspace = true
anyhow.workspace = true
chrono.workspace = true
crossbeam = "0.8.4"
hdf5.workspace = true
hdf5-sys.workspace = true
lazy_static = "1.4.0"
leap-seconds = "0.1.0"
ndarray.workspace = true
serde = { version = "1.0", features = ["serde_derive"] }
serde_yaml = "0.9"
tempfile = "3.10.1"
tracing = { version = "0.1", features = ["log"] }
thiserror = "1.0.59"
