[package]
name = "rdr-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
ccsds = { version = "0.1.0-beta.5", path = "../../ccsds-rs" }
clap = { version = "4.5.4", features = ["derive"] }
rdr = { version = "0.1.0", path = "../rdr" }
tempfile = "3.10.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
