[package]
name = "rdr-cmd"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
ccsds.workspace = true
tracing.workspace = true
hifitime.workspace = true
hdf5.workspace = true

anyhow = "1.0"
rdr = { path = "../rdr-lib" }
clap = { version = "4.5.7", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
crossbeam = "0.8.4"
tempfile = "3.14.0"

